--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css");
+
 @keyframes float {
-    0% { transform: translateY(0px); }
-    50% { transform: translateY(-10px); }
-    100% { transform: translateY(0px); }
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .floating {
-    animation: float 2s ease-in-out infinite;
+  animation: float 2s ease-in-out infinite;
 }
 
 @media (min-width: 1024px) {
-    .container {
-        max-width: 768px;
-        margin: auto;
-    }
+  .container {
+    max-width: 768px;
+    margin: auto;
+  }
+}
+
+.font-pretendard {
+  font-family: "Pretendard Variable", sans-serif;
 }
