--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@
 .animate-pulse { animation: pulse 1.5s infinite ease-in-out; }
 .translate-y-10 { transform: translateY(40px); }
 .translate-y-0 { transform: translateY(0); }
+
+body {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
